# deep-learning-papers

./: .gitignore  README.md  Trainer.py  pyproject.toml  utils.py
adam/: notes.md
alexnet/: alexnet.ipynb  notes.md
attention/: notes.md
backprop/: notes.md
batch-norm/: notes.md
deep-sparse-rectifiers/: notes.md
deep_learning_papers.egg-info/: PKG-INFO  SOURCES.txt
dropout/: notes.md
effective-nmt-attention/: notes.md
glorot-init/: notes.md
kaiming-init/: notes.md
lenet-5/: lenet_5.ipynb  lenet_5.py  notes.md
lib/: trainer.py
lstm/: notes.md
resnet/: notes.md
rnn-encoder-decoder/: notes.md
rnn-overview/: notes.md
seq2seq/: notes.md
vggnet/: notes.md
word2vec_1/: notes.md
word2vec_2/: notes.md
