[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-learning-papers"
version = "0.1.0"
description = "Personal paper implementations and shared PyTorch training utilities."
requires-python = ">=3.10"
dependencies = [
    "torch",
    "matplotlib",
]

[tool.setuptools.packages.find]
include = ["lib*"]
